--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,47 @@
 {
+    "type": "robo-tasks",
     "name": "sweetchuck/robo-stringy",
-    "description": "Template to create a new Robo task.",
+    "description": "Exposes Stringy string manipulation methods",
+    "keywords": [
+        "robo-tasks",
+        "stringy"
+    ],
+    "authors": [
+        {
+            "name": "Dávid Andor",
+            "role": "Maintainer",
+            "homepage": "https://github.com/Sweetchuck"
+        }
+    ],
+    "support": {
+        "source": "https://github.com/Sweetchuck/robo-stringy",
+        "issues": "https://github.com/Sweetchuck/robo-stringy/issues"
+    },
     "license": "GPL-2.0-or-later",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "bin-dir": "bin",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
-        "php": ">=7.1",
-        "consolidation/robo": "^1.2",
+        "php": ">=7.2",
+        "consolidation/robo": "^2.0",
         "danielstjules/stringy": "^3.1"
     },
     "require-dev": {
-        "codeception/codeception": "^2.2",
-        "sweetchuck/codeception-module-robo-task-runner": "^0.4.0",
+        "codeception/codeception": "^4.0",
+        "codeception/module-asserts": "^1.1",
+        "squizlabs/php_codesniffer": "^3.5",
+        "sweetchuck/codeception-module-robo-task-runner": "^0.7",
         "sweetchuck/git-hooks": "^0.0",
-        "sweetchuck/robo-git": "^0.0",
-        "sweetchuck/robo-phpcs": "^0.0",
-        "symfony/finder": "^3.2 || ^4.0",
-        "symfony/yaml": "^3.2 || ^4.0",
+        "sweetchuck/robo-git": "^0.2",
+        "sweetchuck/robo-phpcs": "^0.1",
+        "symfony/error-handler": "^5.0",
+        "symfony/finder": "^4.0",
+        "symfony/yaml": "^4.0",
         "webmozart/path-util": "^2.3"
     },
     "autoload": {
