--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,17 +1,22 @@
 <?xml version="1.0"?>
-<ruleset name="RoboTask">
-    <file>src/</file>
-    <file>src-dev/Composer/</file>
-    <file>tests/</file>
-    <exclude-pattern>tests/_data/</exclude-pattern>
-    <exclude-pattern>tests/_output/</exclude-pattern>
-    <exclude-pattern>tests/_support/_generated/</exclude-pattern>
+<ruleset name="RoboTask"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="./vendor/squizlabs/php_codesniffer/phpcs.xsd">
+
+    <file>./src/</file>
+    <file>./src-dev/Composer/</file>
+    <file>./tests/</file>
+    <exclude-pattern>./tests/_data/</exclude-pattern>
+    <exclude-pattern>./tests/_output/</exclude-pattern>
+    <exclude-pattern>./tests/_support/_generated/</exclude-pattern>
     <exclude-pattern>*.yml</exclude-pattern>
-    <file>RoboFile.php</file>
+    <file>./RoboFile.php</file>
 
-    <rule ref="PSR2"/>
-
+    <rule ref="PSR2" />
+    <rule ref="PSR2.Methods.MethodDeclaration.Underscore">
+        <exclude-pattern>./tests/unit/Task/TaskTestBase.php</exclude-pattern>
+    </rule>
     <rule ref="PSR1.Classes.ClassDeclaration.MissingNamespace">
-        <exclude-pattern>RoboFile.php</exclude-pattern>
+        <exclude-pattern>./RoboFile.php</exclude-pattern>
     </rule>
 </ruleset>
