--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 
 /bin/
-/vendor/
 
 /tests/_output/
 /tests/_support/_generated/
+/tests/*.suite.yml
+
+/vendor/
 
 /.git-hooks.local
+/codeception.yml
+/RoboFileLocal.php
+/RoboFileExample.php
