--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "authors": [
         {
-            "name": "Dávid Andor",
+            "name": "Andor",
             "role": "Maintainer",
             "homepage": "https://github.com/Sweetchuck"
         }
@@ -21,13 +21,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
+        "bin-dir": "bin",
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "bin-dir": "bin",
         "sort-packages": true
     },
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.3",
         "consolidation/robo": "^2.0",
         "danielstjules/stringy": "^3.1"
     },
@@ -35,13 +35,13 @@
         "codeception/codeception": "^4.0",
         "codeception/module-asserts": "^1.1",
         "squizlabs/php_codesniffer": "^3.5",
-        "sweetchuck/codeception-module-robo-task-runner": "^0.7",
-        "sweetchuck/git-hooks": "^0.0",
-        "sweetchuck/robo-git": "^0.2",
-        "sweetchuck/robo-phpcs": "^0.1",
-        "symfony/error-handler": "^5.0",
-        "symfony/finder": "^4.0",
-        "symfony/yaml": "^4.0",
+        "sweetchuck/codeception-module-robo-task-runner": "1.x-dev",
+        "sweetchuck/git-hooks": "2.x-dev",
+        "sweetchuck/robo-git": "1.x-dev",
+        "sweetchuck/robo-phpcs": "1.x-dev",
+        "symfony/error-handler": "^4.0 || ^5.0",
+        "symfony/finder": "^4.0 || ^5.0",
+        "symfony/yaml": "^4.0 || ^5.0",
         "webmozart/path-util": "^2.3"
     },
     "autoload": {
@@ -51,18 +51,11 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Sweetchuck\\Robo\\Stringy\\Composer\\": "src-dev/Composer/",
             "Sweetchuck\\Robo\\Stringy\\Test\\Helper\\": "tests/_support/Helper/",
             "Sweetchuck\\Robo\\Stringy\\Tests\\Acceptance\\": "tests/acceptance/",
             "Sweetchuck\\Robo\\Stringy\\Tests\\Unit\\": "tests/unit/"
         }
     },
-    "scripts": {
-        "post-install-cmd": [
-            "\\Sweetchuck\\Robo\\Stringy\\Composer\\Scripts::postInstallCmd"
-        ],
-        "post-update-cmd": [
-            "\\Sweetchuck\\Robo\\Stringy\\Composer\\Scripts::postUpdateCmd"
-        ]
-    }
+    "scripts": {},
+    "scripts-descriptions": {}
 }
