--- a/tests/acceptance.suite.dist.yml
+++ b/tests/acceptance.suite.dist.yml
@@ -1,7 +1,6 @@
-
-class_name: AcceptanceTester
+actor: 'AcceptanceTester'
 modules:
     enabled:
-        - Asserts
-        - \Sweetchuck\Codeception\Module\RoboTaskRunner\RoboTaskRunner
-        - \Sweetchuck\Robo\Stringy\Test\Helper\Acceptance
+        - 'Asserts'
+        - '\Sweetchuck\Codeception\Module\RoboTaskRunner\RoboTaskRunner'
+        - '\Sweetchuck\Robo\Stringy\Tests\Helper\Acceptance'
