--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,23 @@
 
 version: 2.1
 
-.env_common: &env_common
-    SHELL: '/bin/bash'
+orbs:
+    codecov: 'codecov/codecov@3.0.0'
 
-.env_xdebug: &env_xdebug
-    XDEBUG_MODE: 'coverage'
+.env_app: &env_app
+    SHELL: '/bin/bash'
 
 .env_composer: &env_composer
     COMPOSER_NO_INTERACTION: '1'
     COMPOSER_MEMORY_LIMIT: '-1'
     COMPOSER_DISABLE_XDEBUG_WARN: '1'
-
-orbs:
-    codecov: 'codecov/codecov@3.0.0'
+    COMPOSER_CACHE_DIR: '/home/circleci/.cache/composer'
 
 executors:
     php_min:
+        resource_class: 'small'
         environment:
-            <<: *env_common
-            <<: *env_xdebug
+            <<: *env_app
             <<: *env_composer
 
         docker:
@@ -28,9 +26,9 @@ executors:
                 image: 'circleci/php:7.4'
 
     php_plus1:
+        resource_class: 'small'
         environment:
-            <<: *env_common
-            <<: *env_xdebug
+            <<: *env_app
             <<: *env_composer
 
         docker:
@@ -38,28 +36,55 @@ executors:
                 name: 'main'
                 image: 'circleci/php:8.0'
 
+    php_plus2:
+        resource_class: 'small'
+        environment:
+            <<: *env_app
+            <<: *env_composer
+
+        docker:
+            -
+                name: 'main'
+                image: 'cimg/php:8.1'
+
 commands:
+    install_php_extension_pcov:
+        description: 'Install PCOV PHP extension'
+        steps:
+            -
+                run:
+                    name: 'Install PCOV PHP extension - pecl install pcov'
+                    command: |
+                        sudo pecl install pcov
+                        php -v
+                        php -m
+                        if php -m | grep pcov ; then
+                            exit 0
+                        fi
+
+                        scanDir="$(php -i | grep --color=never --only-matching --perl-regexp '(?<=^Scan this dir for additional \.ini files => ).+')"
+                        echo 'extension=pcov' | sudo tee "${scanDir}/pcov.ini"
+                        php -m
+
+
     composer_install:
         description: 'Install Composer dependencies with cache restore and save'
         steps:
             -
                 restore_cache:
-                    name: 'Composer - cache restore'
+                    name: 'Composer - Composer restore'
                     keys:
                         - 'composer-{{ checksum "./composer.lock" }}-2'
-
             -
                 run:
                     name: 'Composer - install'
                     command: >
-                        composer install --no-progress
-
+                        composer install --no-progress --ansi
             -
                 save_cache:
-                    name: 'Composer - cache save'
+                    name: 'Composer - Composer save'
                     key: 'composer-{{ checksum "./composer.lock" }}-2'
                     paths:
-                        - '~/.composer/cache/'
                         - '~/.cache/composer/'
 
     lint:
@@ -68,7 +93,8 @@ commands:
             -
                 run:
                     name: 'Run linters'
-                    command: 'bin/robo lint'
+                    command: |
+                        "$(composer config bin-dir)/robo" lint
 
     test:
         description: 'Run tests'
@@ -76,23 +102,25 @@ commands:
             -
                 run:
                     name: 'Codeception - unit'
-                    command: 'bin/robo test unit'
+                    command: |
+                        "$(composer config bin-dir)/robo" test unit
             -
                 codecov/upload:
                     flags: 'unit'
-                    file: './tests/_output/machine/coverage/unit/coverage.xml'
+                    file: './tests/_log/machine/coverage/unit/coverage.xml'
             -
                 run:
                     name: 'Codeception - acceptance'
-                    command: 'bin/robo test acceptance'
+                    command: |
+                          "$(composer config bin-dir)/robo" test acceptance
             -
                 codecov/upload:
                     flags: 'acceptance'
-                    file: './tests/_output/machine/coverage/acceptance/coverage.xml'
+                    file: './tests/_log/machine/coverage/acceptance/coverage.xml'
             -
                 store_test_results:
-                    name: 'Store unit test results'
-                    path: './tests/_output/machine/junit'
+                    name: 'Store test results'
+                    path: './tests/_log/machine/junit'
 
 jobs:
     build:
@@ -113,6 +141,7 @@ jobs:
         working_directory: '~/repo'
         steps:
             - 'checkout'
+            - 'install_php_extension_pcov'
             - 'composer_install'
             - 'test'
     test_php_plus1:
@@ -120,6 +149,15 @@ jobs:
         working_directory: '~/repo'
         steps:
             - 'checkout'
+            - 'install_php_extension_pcov'
+            - 'composer_install'
+            - 'test'
+    test_php_plus2:
+        executor: 'php_plus2'
+        working_directory: '~/repo'
+        steps:
+            - 'checkout'
+            - 'install_php_extension_pcov'
             - 'composer_install'
             - 'test'
 
@@ -138,5 +176,9 @@ workflows:
                         - 'build'
             -
                 test_php_plus1:
+                    requires:
+                        - 'build'
+            -
+                test_php_plus2:
                     requires:
                         - 'build'
