--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 
-/bin/
-
-/tests/_output/
+/tests/_log/
 /tests/_support/_generated/
 /tests/*.suite.yml
+/codeception.yml
+/RoboFileLocal.php
 
 /vendor/
 
 /.git-hooks.local
-/codeception.yml
-/RoboFileLocal.php
+
+/robo.yml
 /RoboFileExample.php
