--- a/composer.json
+++ b/composer.json
@@ -21,20 +21,59 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "bin-dir": "bin",
+        "allow-plugins": {
+            "sweetchuck/git-hooks": true
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "repositories": {
+        "nuvoleweb/robo-config - Issue #19": {
+            "type": "package",
+            "package": {
+                "name": "nuvoleweb/robo-config",
+                "description": "CI/developer-friendly configuration processor for Robo.",
+                "type": "robo-tasks",
+                "license": "GPL-2.0-or-later",
+                "version": "2.99.99",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://github.com/nuvoleweb/robo-config/archive/81e9983146c6e4c7acc7584d1a92451eaecfd695.zip"
+                },
+                "source": {
+                    "type": "git",
+                    "url": "https://github.com/nuvoleweb/robo-config.git",
+                    "reference": "81e9983146c6e4c7acc7584d1a92451eaecfd695"
+                },
+                "authors": [
+                    {
+                        "name": "Antonio De Marco",
+                        "email": "antonio@nuvole.org"
+                    }
+                ],
+                "require": {
+                    "consolidation/robo": "^2.1"
+                },
+                "autoload": {
+                    "psr-4": {
+                        "NuvoleWeb\\Robo\\Task\\Config\\": "src/"
+                    }
+                }
+            }
+        }
+    },
     "require": {
         "php": ">=7.4",
         "consolidation/robo": "^2.0",
-        "danielstjules/stringy": "^3.1"
+        "danielstjules/stringy": "^3.1",
+        "sweetchuck/utils": "1.x-dev"
     },
     "require-dev": {
         "ext-json": "*",
         "codeception/codeception": "^4.0",
         "codeception/module-asserts": "^1.1",
+        "nuvoleweb/robo-config": "2.99.99",
         "squizlabs/php_codesniffer": "^3.5",
         "sweetchuck/codeception-module-robo-task-runner": "1.x-dev",
         "sweetchuck/git-hooks": "2.x-dev",
@@ -52,11 +91,12 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Sweetchuck\\Robo\\Stringy\\Test\\Helper\\": "tests/_support/Helper/",
             "Sweetchuck\\Robo\\Stringy\\Tests\\Acceptance\\": "tests/acceptance/",
-            "Sweetchuck\\Robo\\Stringy\\Tests\\Unit\\": "tests/unit/"
+            "Sweetchuck\\Robo\\Stringy\\Tests\\Unit\\": "tests/unit/",
+            "Sweetchuck\\Robo\\Stringy\\Tests\\": "tests/_support/"
         }
     },
     "scripts": {},
-    "scripts-descriptions": {}
+    "scripts-descriptions": {},
+    "extra": {}
 }
