--- a/tests/unit.suite.dist.yml
+++ b/tests/unit.suite.dist.yml
@@ -1,6 +1,5 @@
-
-class_name: UnitTester
+actor: 'UnitTester'
 modules:
     enabled:
-        - Asserts
-        - \Sweetchuck\Robo\Stringy\Test\Helper\Unit
+        - 'Asserts'
+        - '\Sweetchuck\Robo\Stringy\Tests\Helper\Unit'
