--- a/composer.json
+++ b/composer.json
@@ -39,16 +39,16 @@
         "codeception/codeception": "^4.0",
         "codeception/module-asserts": "^1.1",
         "nuvoleweb/robo-config": "2.x-dev",
+        "psr/container": "^1.0",
         "squizlabs/php_codesniffer": "^3.5",
         "sweetchuck/codeception-module-robo-task-runner": "2.x-dev",
         "sweetchuck/git-hooks": "2.x-dev",
         "sweetchuck/robo-git": "2.x-dev",
         "sweetchuck/robo-phpcs": "2.x-dev",
         "sweetchuck/utils": "1.x-dev",
-        "symfony/error-handler": "^5.0",
-        "symfony/finder": "^5.0",
-        "symfony/yaml": "^5.0",
-        "webmozart/path-util": "^2.3"
+        "symfony/error-handler": "^5.0 || ^6.0",
+        "symfony/finder": "^5.0 || ^6.0",
+        "symfony/yaml": "^5.0 || ^6.0"
     },
     "autoload": {
         "psr-4": {
