--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,33 +19,40 @@ executors:
         environment:
             <<: *env_app
             <<: *env_composer
-
         docker:
             -
                 name: 'main'
-                image: 'circleci/php:7.4'
+                image: 'cimg/php:7.4'
 
     php_plus1:
         resource_class: 'small'
         environment:
             <<: *env_app
             <<: *env_composer
-
         docker:
             -
                 name: 'main'
-                image: 'circleci/php:8.0'
+                image: 'cimg/php:8.0'
 
     php_plus2:
         resource_class: 'small'
         environment:
             <<: *env_app
             <<: *env_composer
-
         docker:
             -
                 name: 'main'
                 image: 'cimg/php:8.1'
+
+    php_plus3:
+        resource_class: 'small'
+        environment:
+            <<: *env_app
+            <<: *env_composer
+        docker:
+            -
+                name: 'main'
+                image: 'cimg/php:8.2'
 
 commands:
     install_php_extension_pcov:
@@ -55,16 +62,18 @@ commands:
                 run:
                     name: 'Install PCOV PHP extension - pecl install pcov'
                     command: |
+                        if php -m | grep pcov ; then
+                            exit 0
+                        fi
+
                         sudo pecl install pcov
-                        php -v
-                        php -m
                         if php -m | grep pcov ; then
                             exit 0
                         fi
 
                         scanDir="$(php -i | grep --color=never --only-matching --perl-regexp '(?<=^Scan this dir for additional \.ini files => ).+')"
                         echo 'extension=pcov' | sudo tee "${scanDir}/pcov.ini"
-                        php -m
+                        php -m | grep pcov
 
 
     composer_install:
@@ -125,36 +134,20 @@ commands:
 jobs:
     build:
         executor: 'php_min'
-        working_directory: '~/repo'
         steps:
             - 'checkout'
             - 'composer_install'
     lint:
         executor: 'php_min'
-        working_directory: '~/repo'
         steps:
             - 'checkout'
             - 'composer_install'
             - 'lint'
-    test_php_min:
-        executor: 'php_min'
-        working_directory: '~/repo'
-        steps:
-            - 'checkout'
-            - 'install_php_extension_pcov'
-            - 'composer_install'
-            - 'test'
-    test_php_plus1:
-        executor: 'php_plus1'
-        working_directory: '~/repo'
-        steps:
-            - 'checkout'
-            - 'install_php_extension_pcov'
-            - 'composer_install'
-            - 'test'
-    test_php_plus2:
-        executor: 'php_plus2'
-        working_directory: '~/repo'
+    test:
+        parameters:
+            executor:
+                type: 'string'
+        executor: '<<parameters.executor>>'
         steps:
             - 'checkout'
             - 'install_php_extension_pcov'
@@ -171,14 +164,14 @@ workflows:
                     requires:
                         - 'build'
             -
-                test_php_min:
+                test:
+                    name: 'test_<<matrix.executor>>'
                     requires:
                         - 'build'
-            -
-                test_php_plus1:
-                    requires:
-                        - 'build'
-            -
-                test_php_plus2:
-                    requires:
-                        - 'build'
+                    matrix:
+                        parameters:
+                            executor:
+                                - 'php_min'
+                                - 'php_plus1'
+                                - 'php_plus2'
+                                - 'php_plus3'
